[#145] 로그인 뷰 마저

--- a/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -51,7 +50,7 @@
                                                 </constraints>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="5VJ-xh-sK4"/>
                                             <constraint firstItem="Wez-Bu-MOu" firstAttribute="centerY" secondItem="hjX-VT-Xec" secondAttribute="centerY" id="Aj3-AT-Iex"/>
@@ -71,7 +70,7 @@
                                                 <state key="normal" image="loginXButton"/>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="aPV-Rd-ID2" firstAttribute="centerX" secondItem="9rm-dq-CXo" secondAttribute="centerX" id="A9D-Pj-IXb"/>
                                             <constraint firstAttribute="width" constant="50" id="crw-WN-lMV"/>
@@ -97,7 +96,7 @@
                                                 </constraints>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="50" id="XsA-jQ-MGt"/>
                                             <constraint firstItem="4cm-zL-HFd" firstAttribute="centerX" secondItem="sdz-wt-s2R" secondAttribute="centerX" id="hKw-dE-v3W"/>
@@ -118,10 +117,12 @@
                                                     <constraint firstAttribute="height" constant="24" id="Kzj-bW-PUO"/>
                                                     <constraint firstAttribute="width" constant="24" id="xGr-4b-svp"/>
                                                 </constraints>
-                                                <state key="normal" image="loginXButton"/>
+                                                <state key="normal" image="loginXButton">
+                                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="kfP-J7-W1T" firstAttribute="centerY" secondItem="gPj-ME-zSv" secondAttribute="centerY" id="Kmf-ig-fmO"/>
                                             <constraint firstItem="kfP-J7-W1T" firstAttribute="centerX" secondItem="gPj-ME-zSv" secondAttribute="centerX" id="LSO-DJ-vea"/>
@@ -214,8 +215,5 @@
         <namedColor name="black4Text">
             <color red="0.67500001192092896" green="0.67500001192092896" blue="0.67500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
