--- a/Journey/Journey/Resources/Storyboards/Feed/Mood.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Feed/Mood.storyboard
@@ -41,7 +41,7 @@
                                                     <constraint firstAttribute="height" constant="100" id="aFm-uG-0XK"/>
                                                     <constraint firstAttribute="width" secondItem="tH7-uF-XQK" secondAttribute="height" multiplier="1:1" id="jfC-mD-wmu"/>
                                                 </constraints>
-                                                <state key="normal" image="sampleMoodImg"/>
+                                                <state key="normal" image="imgFaceGraphic1circle"/>
                                                 <connections>
                                                     <action selector="touchSosoDayButton:" destination="IUt-4F-g28" eventType="touchUpInside" id="TdB-ey-Fg7"/>
                                                 </connections>
@@ -71,7 +71,7 @@
                                                     <constraint firstAttribute="height" constant="100" id="R0q-dE-vWj"/>
                                                     <constraint firstAttribute="width" constant="100" id="lye-EH-Vdk"/>
                                                 </constraints>
-                                                <state key="normal" image="sampleMoodImg"/>
+                                                <state key="normal" image="imgFaceGraphic2circle"/>
                                                 <connections>
                                                     <action selector="touchFineDayButton:" destination="IUt-4F-g28" eventType="touchUpInside" id="C05-un-s3b"/>
                                                 </connections>
@@ -100,7 +100,7 @@
                                                     <constraint firstAttribute="width" constant="100" id="3eR-eG-neZ"/>
                                                     <constraint firstAttribute="height" constant="100" id="gYe-hE-kS0"/>
                                                 </constraints>
-                                                <state key="normal" title="Button" image="sampleMoodImg"/>
+                                                <state key="normal" title="Button" image="imgFaceGraphic3circle"/>
                                                 <connections>
                                                     <action selector="touchGoodDayButton:" destination="IUt-4F-g28" eventType="touchUpInside" id="VfX-bx-XPM"/>
                                                 </connections>
@@ -173,10 +173,13 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="findDayLabel" destination="l8y-1n-7bf" id="97N-fT-rTy"/>
                         <outlet property="fineDayButton" destination="MDc-8X-IIb" id="gpm-ni-9AP"/>
                         <outlet property="goodDayButton" destination="oQW-GO-uiq" id="dmW-BH-Th8"/>
+                        <outlet property="goodDayLabel" destination="EwF-LD-eEx" id="od3-H6-GBh"/>
                         <outlet property="nextButton" destination="2l3-3l-nBh" id="fhQ-eQ-C5j"/>
                         <outlet property="sosoDayButton" destination="tH7-uF-XQK" id="dEu-d8-FR2"/>
+                        <outlet property="sosoDayLabel" destination="fJH-Sc-Boc" id="8Zk-Bz-x3q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D2E-L6-VXx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -187,7 +190,9 @@
     <resources>
         <image name="circleGray" width="8.3333330154418945" height="8"/>
         <image name="circlePink" width="8.3333330154418945" height="8"/>
-        <image name="sampleMoodImg" width="300" height="300"/>
+        <image name="imgFaceGraphic1circle" width="100" height="100"/>
+        <image name="imgFaceGraphic2circle" width="100" height="100"/>
+        <image name="imgFaceGraphic3circle" width="100" height="100"/>
         <namedColor name="Pink">
             <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
