--- a/Journey/Journey/Sources/ViewControllers/PopUp/HappyPopUpViewController.xib
+++ b/Journey/Journey/Sources/ViewControllers/PopUp/HappyPopUpViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -22,11 +22,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HappyPopUpViewController" customModule="Journey" customModuleProvider="target">
             <connections>
+                <outlet property="descriptionLabel" destination="jLg-ol-DGp" id="ket-hZ-oCR"/>
                 <outlet property="moodImageView" destination="heI-sw-gBP" id="eov-DO-cK2"/>
                 <outlet property="popUpView" destination="g2h-0J-CTp" id="hIw-eI-sch"/>
                 <outlet property="saveButton" destination="psJ-Zi-EXe" id="MVn-k4-1m8"/>
                 <outlet property="shareButton" destination="ajE-AL-GN7" id="3Dn-wy-4xt"/>
                 <outlet property="shareToDescriptionVSpacing" destination="rJb-oU-7g3" id="66W-Me-xyL"/>
+                <outlet property="titleLabel" destination="bsK-lA-pYe" id="OE1-N0-39B"/>
                 <outlet property="uploadedImageView" destination="myr-i4-ZfU" id="FoQ-No-Dhf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -37,16 +39,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g2h-0J-CTp">
-                    <rect key="frame" x="31" y="203.33333333333334" width="328" height="507.33333333333326"/>
+                    <rect key="frame" x="31" y="203" width="328" height="508"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="소확행 작성 완료!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsK-lA-pYe">
-                            <rect key="frame" x="29" y="47" width="270" height="24"/>
+                            <rect key="frame" x="29" y="47" width="270" height="28"/>
                             <fontDescription key="fontDescription" name="BMHANNA11yrsoldOTF" family="BM HANNA 11yrs old OTF" pointSize="24"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajE-AL-GN7">
-                            <rect key="frame" x="28" y="396.33333333333326" width="272" height="44"/>
+                            <rect key="frame" x="28" y="397" width="272" height="44"/>
                             <color key="backgroundColor" name="Pink2"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="K48-aK-J3n"/>
@@ -60,7 +62,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="psJ-Zi-EXe">
-                            <rect key="frame" x="28" y="442.33333333333326" width="272" height="44"/>
+                            <rect key="frame" x="28" y="443" width="272" height="44"/>
                             <color key="backgroundColor" name="White"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="gVk-pE-v2Q"/>
@@ -74,13 +76,13 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_5732" translatesAutoresizingMaskIntoConstraints="NO" id="myr-i4-ZfU">
-                            <rect key="frame" x="66" y="168.33333333333337" width="196" height="196"/>
+                            <rect key="frame" x="66" y="169" width="196" height="196"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="myr-i4-ZfU" secondAttribute="height" multiplier="1:1" id="y5p-WZ-vJe"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-ol-DGp">
-                            <rect key="frame" x="32" y="90.999999999999972" width="264" height="45.333333333333343"/>
+                            <rect key="frame" x="32" y="95" width="264" height="42"/>
                             <string key="text">당신의 행복이 하나 더 늘었군.
 다른 쟈기들과 함께하면 기쁨이 배가 될거야.
 함께 행복을 공유해보겠어?</string>
@@ -113,7 +115,7 @@
                     </constraints>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="happyCFaceGraphic1" translatesAutoresizingMaskIntoConstraints="NO" id="heI-sw-gBP">
-                    <rect key="frame" x="31" y="101.33333333333331" width="149" height="132"/>
+                    <rect key="frame" x="31" y="101" width="149" height="132"/>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
