[NON_ISSUE] compileXib error 해결

--- a/Journey/Journey/Resources/Storyboards/Auth/SignUpFirst.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/SignUpFirst.storyboard
@@ -28,7 +28,7 @@
                                     <constraint firstAttribute="height" constant="28" id="T9m-nd-Cd9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="그대만의 비밀번호를 만들어줘" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vzx-nN-o6L">
                                 <rect key="frame" x="24" y="261" width="211" height="22"/>
