--- a/Journey/Journey/Sources/Views/YearPickerViewController.xib
+++ b/Journey/Journey/Sources/Views/YearPickerViewController.xib
@@ -25,7 +25,7 @@
                 </pickerView>
                 <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ua-fI-Rxj">
                     <rect key="frame" x="24" y="183" width="327" height="58"/>
-                    <color key="backgroundColor" red="1" green="0.52941176470588236" blue="0.6470588235294118" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" name="Pink2"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="327" id="Qsc-hL-dy7"/>
                         <constraint firstAttribute="height" constant="58" id="rIy-ba-y0l"/>
@@ -76,8 +76,11 @@
     </objects>
     <resources>
         <image name="yearPickerX" width="13" height="12.5"/>
-        <systemColor name="Black1">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="Black1">
+            <color red="0.071000002324581146" green="0.071000002324581146" blue="0.078000001609325409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Pink2">
+            <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
