[#242] 내 서랍장 request 형식 변경, 날짜 형식 변경, 해피 팝업 수정
### Description
- 내 서랍장 request 형식 변경
- AppDate 형식 변경(날짜 추가)
- 해피 팝업 이미지 life cycle 변경

### Related Issue
Resolve #242

--- a/Journey/Journey/Resources/Storyboards/Feed/Mood.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Feed/Mood.storyboard
@@ -173,6 +173,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="dateLabel" destination="adI-yg-IlZ" id="Ik7-PB-pcB"/>
                         <outlet property="findDayLabel" destination="l8y-1n-7bf" id="97N-fT-rTy"/>
                         <outlet property="fineDayButton" destination="MDc-8X-IIb" id="gpm-ni-9AP"/>
                         <outlet property="goodDayButton" destination="oQW-GO-uiq" id="dmW-BH-Th8"/>
