[#245] 전체 오토레이아웃, 다크모드 점검
### Description
-  다크모드 아예 못하게
- signup view color 수정
- year picker view 버튼 중앙정렬
- 로직 수정

### Related Issue
Resolve #245

--- a/Journey/Journey/Resources/Storyboards/Auth/Code.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/Code.storyboard
@@ -32,6 +32,7 @@
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="인증번호 입력" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C2e-eM-amu">
                                 <rect key="frame" x="24" y="232.5" width="366" height="18.5"/>
+                                <color key="textColor" name="Black1Text"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
