--- a/Journey/Journey/Resources/Storyboards/Auth/NewPassword.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/NewPassword.storyboard
@@ -27,6 +27,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="UOw-yr-my4"/>
                                 </constraints>
+                                <color key="textColor" name="Black1Text"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -77,6 +78,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="hRb-OW-MHI"/>
                                 </constraints>
+                                <color key="textColor" name="Black1Text"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
