--- a/Journey/Journey/Resources/Storyboards/Auth/FindPassword.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/FindPassword.storyboard
@@ -29,6 +29,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="yRv-Gi-oCX"/>
                                 </constraints>
+                                <color key="textColor" name="Black1Text"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
