--- a/Journey/Journey/Sources/Views/YearPickerViewController.xib
+++ b/Journey/Journey/Sources/Views/YearPickerViewController.xib
@@ -21,10 +21,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vDf-Je-8oG">
-                    <rect key="frame" x="134" y="42" width="107" height="132"/>
+                    <rect key="frame" x="134" y="42" width="107" height="171"/>
                 </pickerView>
                 <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ua-fI-Rxj">
-                    <rect key="frame" x="24" y="183" width="327" height="58"/>
+                    <rect key="frame" x="24" y="222" width="327" height="58"/>
                     <color key="backgroundColor" name="Pink2"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="327" id="Qsc-hL-dy7"/>
@@ -59,16 +59,16 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2Ua-fI-Rxj" secondAttribute="bottom" constant="59" id="0Pl-Pv-kMo"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2Ua-fI-Rxj" secondAttribute="bottom" constant="20" id="0Pl-Pv-kMo"/>
                 <constraint firstItem="vDf-Je-8oG" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="134" id="B0A-9i-w8v"/>
                 <constraint firstItem="fCq-x0-bm5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="104" id="BUu-9B-aWY"/>
                 <constraint firstItem="vDf-Je-8oG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="42" id="Ete-C7-RDt"/>
                 <constraint firstItem="fCq-x0-bm5" firstAttribute="leading" secondItem="vDf-Je-8oG" secondAttribute="trailing" constant="13" id="GHa-h7-8kl"/>
                 <constraint firstItem="vDf-Je-8oG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="V7E-kS-19h"/>
                 <constraint firstItem="skI-f3-0ES" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="18" id="Yy0-lH-Ep2"/>
+                <constraint firstItem="2Ua-fI-Rxj" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="ehd-Js-IQD"/>
                 <constraint firstItem="2Ua-fI-Rxj" firstAttribute="top" secondItem="vDf-Je-8oG" secondAttribute="bottom" constant="9" id="f8i-dm-gb9"/>
                 <constraint firstAttribute="trailing" secondItem="skI-f3-0ES" secondAttribute="trailing" constant="18" id="pbi-9D-QQy"/>
-                <constraint firstItem="2Ua-fI-Rxj" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="24" id="xCn-IV-aDH"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="109.42028985507247" y="263.83928571428572"/>
